# Thread_lab_3

./: .gitignore  Config.py  generator.py  main.py  plot.py  readme.md
body/: body.py
task1/: task1.py
task2/: __init__.py  task2.py  task2_lib.py
task2/task2_c/: CMakeLists.txt  task2.c  task2.h
utils/: abstract_task_class.py  config.py  generator.py  plot.py  surface.py  time_checker.py
